# aylen

./: .gitignore  README-WEBAPP.md  README.md  legal_agent.py  legal_surveys.yaml  pyproject.toml  run-backend.sh  run-frontend.sh
backend/: api.py  cache_service.py  data_objects.py
backend/agents/: legal_agent.py  results_checker.py
backend/tools/: document_models.py  document_service.py  utils.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
