[project]
name = "aylen-legal-ai"
version = "0.1.0"
description = "Simple Legal AI agent that provides consistent legal analysis across different countries"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic-ai>=0.0.13",
    "pydantic>=2.10.3",
    "boto3>=1.35.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"