[project]
name = "aylen-legal-ai"
version = "0.1.0"
description = "Simple Legal AI agent that provides consistent legal analysis across different countries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-ai>=0.0.13",
    "pydantic>=2.10.3",
    "boto3>=1.35.0",
    "pyyaml>=6.0.2",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.57.2",
    "requests>=2.31.0",
    "duckdb>=0.9.0",
    # RAG System Dependencies
    "PyMuPDF>=1.23.0,<1.25.0",
    "python-docx>=0.8.11,<1.2.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "anthropic>=0.3.0,<1.0.0",
    # Optional: Vector search (requires Python 3.10+)
    "sentence-transformers>=2.2.0,<3.0.0",
    "chromadb>=0.4.0,<0.6.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "jupyter>=1.1.1",
    "ipykernel>=7.0.1",
    "openpyxl>=3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
